--- a/Uebungen/ue0_vsc_template/.vscode/settings.json
+++ b/Uebungen/ue0_vsc_template/.vscode/settings.json
@@ -8,9 +8,6 @@
     "files.associations": {
         "delay.h": "c",
         "io.h": "c",
-        "interrupt.h": "c",
-        "uart.h": "c",
-        "periodictimer.h": "c",
-        "twi.h": "c"
+        "interrupt.h": "c"
     }
 }
